[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_project"
version = "0.1.0"
description = "lecture_1"
authors = [
    {name = "JennieBolotnikova", email = "bolotnikova.jenni@gmail.com"}
]

keywords = ["python", "project"]

dependencies = [
    "colorama>=0.4.6"
]

[project.urls]
Homepage = "https://github.com/JennieBolotnikova/innowise_laboratory"
Repository = "https://github.com/JennieBolotnikova/innowise_laboratory"